# deadlock_analytics

./: .claude  .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  compare_endpoints.py  pyproject.toml  test_api.py  test_client.py  test_client_fixed.py  test_images_endpoint.py  test_mmr_endpoint.py  test_mmr_simple.py  test_ranks_endpoint.py  variables  verify_average.py
docs/: api_schema_reference.md  match_data_reference.md  minimap_replay.md
sample/: sample-match.json
scripts/: analyze_schema.py  deadlock_notebook.py
static/css/: index.css  match.css  results.css
static/gimp/: graphic_cityscape.xcf
templates/: index.html  match.html  results.html
terraform/: .gitignore  README.md  deploy_cloudrun_app.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
