[project]
name = "deadlock-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deadlock-api-client",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "marimo>=0.19.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
]

[tool.uv.sources]
deadlock-api-client = { git = "https://github.com/deadlock-api/openapi-clients", subdirectory = "python/api" }
